--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ go:
     - 1.14.x
 
 env:
+    - GO111MODULE=on
     - lta.AccountKey=key 
     - lta.Carpark=carpark 
     - lta.TaxiAvailability=taxiAvailability 
