Fix multiple environment variables using global.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ go:
     - 1.14.x
 
 env:
-    - GO111MODULE=on
-    - lta.AccountKey=key 
-    - lta.Carpark=carpark 
-    - lta.TaxiAvailability=taxiAvailability 
-    - lta.BusArrival=busArrival
+    global:
+        - GO111MODULE=on
+        - lta.AccountKey=key 
+        - lta.Carpark=carpark 
+        - lta.TaxiAvailability=taxiAvailability 
+        - lta.BusArrival=busArrival
