--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: go
 go:
     - 1.14.x
 
-go_import_path: mypackage/datasource/datasource
+script: cd src\mypackage && go test -v ./...
 
 env:
     global:
